Feat: Structuring SQLite

--- a/Mobile/android/app/build.gradle
+++ b/Mobile/android/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-mmkv')
+    implementation project(':react-native-sqlite-storage')
 
 
     if (hermesEnabled.toBoolean()) {
@@ -124,6 +125,7 @@ dependencies {
     }
 }
 
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
+applyNativeModulesAppBuildGradle(project)
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 // apply from: file("../../node_modules/react-native-mmkv/android/mmkv-android.gradle")
