--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.4.0",
     "@types/styled-components-react-native": "^5.2.5",
     "axios": "^1.7.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-elements": "^3.4.3",
