--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
@@ -19,9 +20,13 @@
     "@react-navigation/stack": "^6.4.0",
     "@types/styled-components-react-native": "^5.2.5",
     "axios": "^1.7.2",
+    "luxon": "^3.5.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-calendars": "^1.1306.0",
+    "react-native-date-picker": "^5.0.4",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
@@ -30,8 +35,10 @@
     "react-native-mmkv": "^2.12.2",
     "react-native-mmkv-storage": "^0.9.1",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-paper": "^5.12.4",
+    "react-native-paper-dates": "^0.22.24",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
