Fix: Regrouping postings by 'dataRelease' / Apk name

--- a/Mobile/android/app/build.gradle
+++ b/Mobile/android/app/build.gradle
@@ -109,6 +109,15 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            def date = new Date()
+            def formattedDate = date.format("yyyy-MM-dd")
+
+            def newName = "MyMoney-${formattedDate}.apk"
+            output.outputFileName = newName
+        }
+    }
 }
 
 dependencies {
