--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.4.0",
     "@types/styled-components-react-native": "^5.2.5",
     "axios": "^1.7.2",
+    "fbjs": "^3.0.5",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -43,7 +44,7 @@
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-snap-carousel": "^1.3.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
