--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -37,6 +37,7 @@
     "react-native-mmkv-storage": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-paper": "^5.12.4",
     "react-native-paper-dates": "^0.22.24",
