--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.75.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-masked-text": "^1.12.5",
     "react-native-mmkv": "^2.12.2",
     "react-native-mmkv-storage": "^0.10.3",
